laborations/lab1/testsuite/good/synthetic031.cc
int main () {
  int comment = 0;
  return comment;
}
