laborations/lab1/testsuite/bad/bad121.cc
int main() {
	return (int x = 3);
}
